# seal-harness

./: .coverage-thresholds.json  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  flake.nix  opencode.json  seal-harness.cabal
.beads/: .gitignore
.beads/plans/: active-plan.md.bak2
.github/workflows/: ci.yml  ghc-cache-probe.yml
.opencode/: OPENCODE.md
.opencode/agents/: code-review-agent.md  coder-agent.md  cto-agent.md  customer-service-agent.md  designer-agent.md  issue-orchestrator.md  pr-shepherd-agent.md  researcher-agent.md  security-auditor-agent.md  swarm-coordinator-agent.md  test-automator-agent.md
.opencode/commands/: design-review-gate.md  external-tools-health.md  handle-pr-comments.md  handoff.md  prime.md  review-design.md  self-reflect.md  setup.md  start-task.md  status.md
.opencode/skills/brainstorming-extension/: SKILL.md
.opencode/skills/create-issue/: SKILL.md
.opencode/skills/external-tools/: SKILL.md
.opencode/skills/handling-pr-comments/: SKILL.md
.opencode/skills/handoff/: SKILL.md
.opencode/skills/migrate/: SKILL.md
.opencode/skills/orchestrated-execution/: SKILL.md
.opencode/skills/plan-review-gate/: SKILL.md
.opencode/skills/pr-shepherd/: SKILL.md
.opencode/skills/setup/: SKILL.md
.opencode/skills/start/: SKILL.md
.opencode/skills/status/: SKILL.md
.opencode/skills/visual-review/: SKILL.md
config/skills/: seal-usage.md
docs/: 2026-07-22-embed-frontend-plan.md  2026-07-22-untrusted-io-infrastructure-plan.md  2026-07-23-per-session-workdir-design.md  2026-07-24-seal-usage-skill.md  2026-07-24-workdir-escape-brainstorm.md  convert_metaswarm_to_seal.py
docs/handoffs/: handoff-2026-07-05-1339.md  handoff-2026-07-05-1900.md
docs/superpowers/plans/: 2026-06-28-phase-1-secret-vault.md  2026-06-28-phase-2-vault-cli-mvp.md  2026-06-28-seal-harness-roadmap.md  2026-06-30-agent-spine-cli.md  2026-06-30-phase-3-m1-provider-commands.md  2026-07-01-phase-3-m2-sessions-model.md  2026-07-02-ollama-provider.md  2026-07-02-provider-default-model.md  2026-07-03-phase-3-m4-spine-commands.md  2026-07-05-phase-5-audited-stores.md  2026-07-05-phase5-followup-hybrid-agent-discovery.md  2026-07-06-default-agent-binding.md  2026-07-06-phase-2a-cross-channel-types.md  2026-07-06-phase-2b-signal-channel.md  2026-07-06-phase-6a-harness-backend.md  2026-07-06-phase-6b-harness-tabs.md  2026-07-06-phase-7a-web-frontend.md  2026-07-07-phase-4-untrusted-opcodes.md  2026-07-07-phase-7b-full-frontend.md  2026-07-19-new-command.md  2026-07-22-remote-enforcement-hardening-plan.md
docs/superpowers/specs/: 2026-06-28-phase-2-vault-cli-mvp-design.md  2026-06-28-remote-only-untrusted-execution-design.md  2026-06-28-slash-command-infrastructure-design.md  2026-06-30-agent-spine-cli-design.md  2026-06-30-phase-3-multi-provider-sessions-design.md  2026-07-01-anthropic-oauth-design.md  2026-07-02-ollama-local-no-vault-design.md  2026-07-02-ollama-provider-design.md  2026-07-02-provider-default-model-design.md  2026-07-03-dynamic-retrieval-linefile-design.md  2026-07-21-skill-load-design.md  2026-07-22-remote-enforcement-tamper-proof-design.md
exe/: Main.hs
frontend/: design-tokens.css  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: capstone.spec.ts  global-setup.ts  global-teardown.ts
frontend/src/: App.css  App.tsx  main.tsx  test-setup.ts  types.ts
frontend/src/__tests__/: App.test.tsx  types.test.ts
frontend/src/components/: ActiveTabs.tsx  AgentsView.tsx  BottomBar.tsx  ChatArea.tsx  HarnessControls.tsx  JsonTree.tsx  NewSessionComposer.tsx  NewTabComposer.tsx  RunningHarnesses.tsx  Sidebar.tsx  SkillsView.tsx  StatusDot.tsx  TopBar.tsx
frontend/src/hooks/: useApi.ts  useListsStream.ts  useNewTabSpec.ts  useSessionActivityStream.ts  useTranscriptStream.ts
frontend/src/lib/: streamClient.ts
frontend/src/types/: stream.ts
src/Seal/: AppMain.hs  Ingest.hs  Repl.hs  Tabs.hs  Tui.hs
src/Seal/Agent/: Env.hs  Loop.hs
src/Seal/Audited/: Chain.hs  Replay.hs  Types.hs
src/Seal/Channel/: Caps.hs  Cli.hs
src/Seal/Channels/: Class.hs  Cursor.hs  Loop.hs  Signal.hs  Telegram.hs
src/Seal/Command/: Agent.hs  Background.hs  Call.hs  Channel.hs  Help.hs  Model.hs  New.hs  Parse.hs  Provider.hs  Serve.hs  Session.hs  Skill.hs  Spec.hs  Tab.hs
src/Seal/Commands/: Greet.hs  Tick.hs
src/Seal/Config/: File.hs  Migrate.hs  Paths.hs  Security.hs
src/Seal/Core/: AllowList.hs  ChannelKind.hs  MessageSource.hs  Paging.hs  Types.hs
src/Seal/Gateway/: API.hs  Config.hs  Send.hs  Server.hs  Stream.hs  StreamBroker.hs  Transcript.hs
src/Seal/Git/: Repo.hs
src/Seal/Handles/: AskReply.hs  Audited.hs  Channel.hs  Harness.hs  Tab.hs  Transcript.hs
src/Seal/Harness/: Discovery.hs  Id.hs  Observer.hs  Reconcile.hs  Registry.hs  Tmux.hs
src/Seal/ISA/: Dispatch.hs  Opcode.hs  Registry.hs
src/Seal/Media/: Image.hs  Tts.hs
src/Seal/Memory/: Backend.hs  Types.hs
src/Seal/Providers/: Anthropic.hs  Class.hs  ContextWindow.hs  Ollama.hs  Registry.hs
src/Seal/Routing/: Route.hs
src/Seal/Security/: Adoption.hs  Command.hs  Crypto.hs  Path.hs  Policy.hs  Secrets.hs  Vault.hs
src/Seal/Session/: Kind.hs  Lock.hs  Log.hs  Meta.hs  Store.hs  Workdir.hs
src/Seal/Signal/: Config.hs
src/Seal/Skills/: Autoload.hs  Backend.hs  Builtins.hs  Codec.hs  Types.hs
src/Seal/Store/: Markdown.hs
src/Seal/Tabs/: Persist.hs  Relay.hs  Runtimes.hs  Types.hs  Wizard.hs
src/Seal/Telegram/: Config.hs
src/Seal/Text/: LineFile.hs
src/Seal/Tools/: Args.hs
src/Seal/Transcript/: Conv.hs  Entries.hs  Reconstruct.hs  Types.hs
src/Seal/Types/: App.hs  Command.hs  Config.hs  Env.hs
src/Seal/Util/: AesonUtils.hs
src/Seal/Vault/: Backend.hs  Commands.hs
src/Seal/Web/: Browser.hs  Extract.hs  Fetch.hs  Search.hs  (+2 more)
test/: Main.hs
test/Seal/: AppMainSpec.hs  ConfigSpec.hs  IngestSpec.hs  MetaswarmOrchestrationSpec.hs  Phase2aSpec.hs  Phase2bSpec.hs  Phase4Spec.hs  Phase5Spec.hs  Phase6aSpec.hs  Phase6bSpec.hs  Phase7aSpec.hs  TabsSpec.hs
(+222 files in other folders)
