cabal-version: 3.0
name: seal-harness
version: 0.1.0.0
synopsis: A harness for secure AI agent execution around the SealOp ISA
description:
  Seal Harness is an agent runtime designed from the ground up for security
  and reliability around the SealOp Instruction Set Architecture (ISA). Every
  agent action is a typed opcode, recorded in an append-only hash-chained
  transcript that serves as the audit log.
license: LicenseRef-FSL-1.1-MIT
license-file: LICENSE
author: Doug Beardsley
maintainer: Doug Beardsley
build-type: Simple
extra-doc-files:
    CHANGELOG.md
    README.md

common settings
    default-language: GHC2021
    default-extensions:
        DeriveGeneric
        DerivingStrategies
        LambdaCase
        ScopedTypeVariables
    ghc-options:
        -Wall -Werror -Wcompat -Widentities
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wname-shadowing
        -Wpartial-fields
        -Wredundant-constraints

library
    import: settings
    exposed-modules:
        Seal.Core.Types
        Seal.Providers.Anthropic
        Seal.Providers.Class
        Seal.Transcript.Types
        Seal.Handles.Transcript
        Seal.AppMain
        Seal.Channel.Caps
        Seal.Channel.Cli
        Seal.Command.Help
        Seal.Command.Parse
        Seal.Command.Spec
        Seal.Config.File
        Seal.Config.Paths
        Seal.Ingest
        Seal.Security.Command
        Seal.Security.Crypto
        Seal.Security.Path
        Seal.Security.Policy
        Seal.Security.Secrets
        Seal.Security.Vault
        Seal.Security.Vault.Age
        Seal.Tui
        Seal.Types.App
        Seal.Types.Command
        Seal.Types.Config
        Seal.Types.Env
        Seal.Vault.Backend
        Seal.Vault.Commands
        Seal.ISA.Dispatch
        Seal.ISA.Opcode
        Seal.ISA.Ops.Human
        Seal.ISA.Ops.File
        Seal.ISA.Registry
    build-depends:
        base >= 4.18 && < 5
      , aeson
      , base64-bytestring
      , bytestring
      , configuration-tools
      , containers
      , crypton
      , directory
      , exceptions
      , filepath
      , haskeline
      , katip
      , lens
      , memory
      , mtl
      , optparse-applicative
      , stm
      , text
      , time
      , http-client
      , http-client-tls
      , http-types
      , tomland
      , typed-process
      , unix
    hs-source-dirs: src

executable seal
    import: settings
    main-is: Main.hs
    build-depends:
        base
      , seal-harness
      , haskeline
    hs-source-dirs: exe
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite tests
    import: settings
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        base
      , seal-harness
      , QuickCheck
      , aeson
      , bytestring
      , containers
      , directory
      , filepath
      , hspec
      , optparse-applicative
      , temporary
      , text
      , time
      , typed-process
      , unix
    hs-source-dirs: test
    other-modules:
        Seal.Core.TypesSpec
        Seal.Transcript.TypesSpec
        Seal.Handles.TranscriptSpec
        Seal.AppMainSpec
        Seal.Channel.CliSpec
        Seal.Command.HelpSpec
        Seal.Command.ParseSpec
        Seal.Command.SpecSpec
        Seal.Config.FileSpec
        Seal.Config.PathsSpec
        Seal.ConfigSpec
        Seal.IngestSpec
        Seal.Security.CommandSpec
        Seal.Security.CryptoSpec
        Seal.Security.PathSpec
        Seal.Security.PolicySpec
        Seal.Security.SecretsSpec
        Seal.Security.Vault.AgeSpec
        Seal.Security.VaultSpec
        Seal.TestHelpers.Arbitrary
        Seal.TestHelpers.FakeCaps
        Seal.Providers.AnthropicSpec
        Seal.Providers.ClassSpec
        Seal.Vault.BackendSpec
        Seal.Vault.CommandsSpec
        Seal.ISA.DispatchSpec
        Seal.ISA.Ops.HumanSpec
        Seal.ISA.Ops.FileSpec
        Seal.ISA.RegistrySpec
