cabal-version: 3.0
name: seal-harness
version: 0.1.0.0
synopsis: A harness for secure AI agent execution around the SealOp ISA
description:
  Seal Harness is an agent runtime designed from the ground up for security
  and reliability around the SealOp Instruction Set Architecture (ISA). Every
  agent action is a typed opcode, recorded in an append-only hash-chained
  transcript that serves as the audit log.
license: LicenseRef-FSL-1.1-MIT
license-file: LICENSE
author: Doug Beardsley
maintainer: Doug Beardsley
build-type: Simple
extra-doc-files:
    CHANGELOG.md
    README.md

common settings
    default-language: GHC2021
    default-extensions:
        DeriveGeneric
        DerivingStrategies
        LambdaCase
        ScopedTypeVariables
    ghc-options:
        -Wall -Werror -Wcompat -Widentities
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wname-shadowing
        -Wpartial-fields
        -Wredundant-constraints

library
    import: settings
    exposed-modules:
        Seal.Core.Paging
        Seal.Core.Types
        Seal.Providers.Anthropic
        Seal.Providers.Anthropic.OAuth
        Seal.Providers.Class
        Seal.Providers.Ollama
        Seal.Providers.Registry
        Seal.Transcript.Types
        Seal.Handles.Transcript
        Seal.AppMain
        Seal.Channel.Caps
        Seal.Channel.Cli
        Seal.Command.Help
        Seal.Command.Model
        Seal.Command.Parse
        Seal.Command.Provider
        Seal.Command.Session
        Seal.Command.Spec
        Seal.Config.File
        Seal.Config.Paths
        Seal.Ingest
        Seal.Session.Meta
        Seal.Session.Store
        Seal.Security.Command
        Seal.Security.Crypto
        Seal.Security.Path
        Seal.Security.Policy
        Seal.Security.Secrets
        Seal.Security.Vault
        Seal.Security.Vault.Age
        Seal.Text.LineFile
        Seal.Tui
        Seal.Types.App
        Seal.Types.Command
        Seal.Types.Config
        Seal.Types.Env
        Seal.Vault.Backend
        Seal.Vault.Commands
        Seal.Agent.Env
        Seal.Agent.Loop
        Seal.ISA.Dispatch
        Seal.ISA.Opcode
        Seal.ISA.Ops.Human
        Seal.ISA.Ops.File
        Seal.ISA.Ops.Secret
        Seal.ISA.Registry
    build-depends:
        base >= 4.18 && < 5
      , aeson
      , base64-bytestring
      , bytestring
      , configuration-tools
      , containers
      , crypton
      , directory
      , exceptions
      , filepath
      , haskeline
      , katip
      , lens
      , memory
      , mtl
      , optparse-applicative
      , stm
      , text
      , time
      , http-client
      , http-client-tls
      , http-types
      , tomland
      , typed-process
      , unix
      , unordered-containers
      , validation-selective
    hs-source-dirs: src

executable seal
    import: settings
    main-is: Main.hs
    build-depends:
        base
      , seal-harness
      , haskeline
    hs-source-dirs: exe
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite tests
    import: settings
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        base
      , seal-harness
      , QuickCheck
      , aeson
      , bytestring
      , containers
      , directory
      , filepath
      , hspec
      , http-client
      , optparse-applicative
      , temporary
      , text
      , time
      , typed-process
      , unix
    hs-source-dirs: test
    other-modules:
        Seal.Core.TypesSpec
        Seal.Core.PagingSpec
        Seal.Transcript.TypesSpec
        Seal.Handles.TranscriptSpec
        Seal.AppMainSpec
        Seal.Channel.CliSpec
        Seal.Channel.WiringSpec
        Seal.Command.HelpSpec
        Seal.Command.ModelSpec
        Seal.Command.ParseSpec
        Seal.Command.ProviderSpec
        Seal.Command.SessionSpec
        Seal.Command.SpecSpec
        Seal.Config.FileSpec
        Seal.Config.PathsSpec
        Seal.ConfigSpec
        Seal.IngestSpec
        Seal.Security.CommandSpec
        Seal.Security.CryptoSpec
        Seal.Security.PathSpec
        Seal.Security.PolicySpec
        Seal.Security.SecretsSpec
        Seal.Session.MetaSpec
        Seal.Session.StoreSpec
        Seal.Text.LineFileSpec
        Seal.Security.Vault.AgeSpec
        Seal.Security.VaultSpec
        Seal.TestHelpers.Arbitrary
        Seal.TestHelpers.FakeCaps
        Seal.TestHelpers.FakeVault
        Seal.Providers.AnthropicSpec
        Seal.Providers.Anthropic.OAuthSpec
        Seal.Providers.ClassSpec
        Seal.Providers.OllamaSpec
        Seal.Providers.RegistrySpec
        Seal.Vault.BackendSpec
        Seal.Vault.CommandsSpec
        Seal.Agent.LoopSpec
        Seal.ISA.DispatchSpec
        Seal.ISA.Ops.HumanSpec
        Seal.ISA.Ops.FileSpec
        Seal.ISA.Ops.SecretSpec
        Seal.ISA.RegistrySpec
