cabal-version: 3.0
name: seal-harness
version: 0.1.0.0
synopsis: A harness for secure AI agent execution around the SealOp ISA
description:
  Seal Harness is an agent runtime designed from the ground up for security
  and reliability around the SealOp Instruction Set Architecture (ISA). Every
  agent action is a typed opcode, recorded in an append-only hash-chained
  transcript that serves as the audit log.
license: LicenseRef-FSL-1.1-MIT
license-file: LICENSE
author: Doug Beardsley
maintainer: Doug Beardsley
build-type: Simple
extra-doc-files:
    CHANGELOG.md
    README.md

common settings
    default-language: GHC2021
    default-extensions:
        DeriveGeneric
        DerivingStrategies
        LambdaCase
        ScopedTypeVariables
    ghc-options:
        -Wall -Werror -Wcompat -Widentities
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wname-shadowing
        -Wpartial-fields
        -Wredundant-constraints

library
    import: settings
    exposed-modules:
        Seal.Core.AllowList
        Seal.Core.ChannelKind
        Seal.Core.MessageSource
        Seal.Core.Paging
        Seal.Core.Types
        Seal.Providers.Anthropic
        Seal.Providers.Anthropic.OAuth
        Seal.Providers.Class
        Seal.Providers.Ollama
        Seal.Providers.Registry
        Seal.Transcript.Types
        Seal.Transcript.Conv
        Seal.Transcript.Entries
        Seal.Transcript.Reconstruct
        Seal.Handles.Channel
        Seal.Handles.Harness
        Seal.Handles.Tab
        Seal.Handles.Transcript
        Seal.Harness.Id
        Seal.Harness.Registry
        Seal.Harness.Observer
        Seal.Harness.Reconcile
        Seal.Harness.Tmux
        Seal.Harness.Discovery
        Seal.Security.Adoption
        Seal.Session.Kind
        Seal.Tabs.Types
        Seal.AppMain
        Seal.Channel.Caps
        Seal.Channel.Cli
        Seal.Channels.Class
        Seal.Channels.Signal
        Seal.Channels.Signal.Run
        Seal.Channels.Signal.Transport
        Seal.Command.Help
        Seal.Command.Model
        Seal.Command.Parse
        Seal.Command.Provider
        Seal.Command.Session
        Seal.Command.Skill
        Seal.Command.Agent
        Seal.Command.Spec
        Seal.Config.File
        Seal.Config.Paths
        Seal.Git.Repo
        Seal.Store.Markdown
        Seal.Ingest
        Seal.Session.Meta
        Seal.Session.Store
        Seal.Signal.Config
        Seal.Security.Command
        Seal.Security.Crypto
        Seal.Security.Path
        Seal.Security.Policy
        Seal.Security.Secrets
        Seal.Security.Vault
        Seal.Security.Vault.Age
        Seal.Text.LineFile
        Seal.Tui
        Seal.Types.App
        Seal.Types.Command
        Seal.Types.Config
        Seal.Types.Env
        Seal.Vault.Backend
        Seal.Vault.Commands
        Seal.Agent.Env
        Seal.Agent.Loop
        Seal.Agent.Def.Types
        Seal.Agent.Def.Backend
        Seal.Agent.Runtime.Registry
        Seal.ISA.Dispatch
        Seal.ISA.Opcode
        Seal.ISA.Ops.Human
        Seal.ISA.Ops.File
        Seal.ISA.Ops.Harness
        Seal.ISA.Ops.Secret
        Seal.ISA.Ops.Memory
        Seal.ISA.Ops.Skills
        Seal.ISA.Ops.Agent
        Seal.ISA.Registry
        Seal.Memory.Types
        Seal.Memory.Backend
        Seal.Skills.Types
        Seal.Skills.Backend
    build-depends:
        base >= 4.18 && < 5
      , aeson
      , base64-bytestring
      , bytestring
      , configuration-tools
      , containers
      , crypton
      , directory
      , exceptions
      , filepath
      , haskeline
      , katip
      , lens
      , memory
      , mtl
      , optparse-applicative
      , stm
      , text
      , time
      , http-client
      , http-client-tls
      , http-types
      , tomland
      , process
      , unix
      , unordered-containers
      , validation-selective
      , vector
      , random
      , uuid-types
    hs-source-dirs: src

executable seal
    import: settings
    main-is: Main.hs
    build-depends:
        base
      , seal-harness
      , haskeline
    hs-source-dirs: exe
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite tests
    import: settings
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        base
      , seal-harness
      , QuickCheck
      , aeson
      , bytestring
      , containers
      , directory
      , filepath
      , hspec
      , http-client
      , optparse-applicative
      , stm
      , temporary
      , text
      , time
      , process
      , unix
    hs-source-dirs: test
    other-modules:
        Seal.Core.ChannelKindSpec
        Seal.Core.MessageSourceSpec
        Seal.Core.AllowListSpec
        Seal.Core.TypesSpec
        Seal.Core.PagingSpec
        Seal.Harness.IdSpec
        Seal.Harness.RegistrySpec
        Seal.Harness.ReconcileSpec
        Seal.Harness.TmuxSpec
        Seal.Harness.TmuxIOSpec
        Seal.Harness.DiscoverySpec
        Seal.Tabs.TypesSpec
        Seal.Transcript.TypesSpec
        Seal.Transcript.ConvSpec
        Seal.Transcript.EntriesSpec
        Seal.Transcript.ReconstructSpec
        Seal.Handles.ChannelSpec
        Seal.Handles.HarnessSpec
        Seal.Handles.TabSpec
        Seal.Handles.TranscriptSpec
        Seal.Memory.TypesSpec
        Seal.Memory.BackendSpec
        Seal.Skills.TypesSpec
        Seal.Skills.BackendSpec
        Seal.Agent.Def.TypesSpec
        Seal.Agent.Def.BackendSpec
        Seal.Agent.Runtime.RegistrySpec
        Seal.ISA.Ops.MemorySpec
        Seal.ISA.Ops.SkillsSpec
        Seal.ISA.Ops.AgentSpec
        Seal.Phase2aSpec
        Seal.Phase2bSpec
        Seal.Phase6aSpec
        Seal.Phase5Spec
        Seal.AppMainSpec
        Seal.Signal.ConfigSpec
        Seal.Channel.CliSpec
        Seal.Channel.WiringSpec
        Seal.Channels.ClassSpec
        Seal.Channels.SignalSpec
        Seal.Channels.Signal.EnvelopeSpec
        Seal.Channels.Signal.RunSpec
        Seal.Channels.Signal.TransportSpec
        Seal.Command.HelpSpec
        Seal.Command.ModelSpec
        Seal.Command.ParseSpec
        Seal.Command.ProviderSpec
        Seal.Command.SessionSpec
        Seal.Command.SkillSpec
        Seal.Command.AgentSpec
        Seal.Command.SpecSpec
        Seal.Config.FileSpec
        Seal.Config.PathsSpec
        Seal.ConfigSpec
        Seal.IngestSpec
        Seal.Security.CommandSpec
        Seal.Security.AdoptionSpec
        Seal.Security.CryptoSpec
        Seal.Security.PathSpec
        Seal.Security.PolicySpec
        Seal.Security.SecretsSpec
        Seal.Session.MetaSpec
        Seal.Session.StoreSpec
        Seal.Text.LineFileSpec
        Seal.Security.Vault.AgeSpec
        Seal.Security.VaultSpec
        Seal.TestHelpers.Arbitrary
        Seal.TestHelpers.FakeCaps
        Seal.TestHelpers.FakeChannel
        Seal.TestHelpers.FakeVault
        Seal.Providers.AnthropicSpec
        Seal.Providers.Anthropic.OAuthSpec
        Seal.Providers.ClassSpec
        Seal.Providers.OllamaSpec
        Seal.Providers.RegistrySpec
        Seal.Vault.BackendSpec
        Seal.Vault.CommandsSpec
        Seal.Agent.LoopSpec
        Seal.ISA.DispatchSpec
        Seal.ISA.Ops.HumanSpec
        Seal.ISA.Ops.FileSpec
        Seal.ISA.Ops.SecretSpec
        Seal.ISA.RegistrySpec
